Changes made , index.md updated

--- a/contrib/Recursion/Recursion.ipynb
+++ b/contrib/Recursion/Recursion.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "7ec0fbc5",
    "metadata": {},
    "outputs": [],
@@ -32,8 +32,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "091176e1",
+   "metadata": {},
+   "source": [
+    "Explanation:The above code uses recursion. We know that n!=n*(n-1)!. The same logic is used here,\n",
+    "n!= n*factorial(n-1). The time complexity is O(n) ."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "1e3e0ed7",
    "metadata": {},
    "outputs": [
@@ -59,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "909ad0c2",
    "metadata": {},
    "outputs": [],
@@ -75,8 +84,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "03b3b970",
+   "metadata": {},
+   "source": [
+    "Explanation:The above code finds the nth fibonacci number using recursion.We know that the nth number is the sum of (n-1)th number and (n-2)th number. We are incorporating the same logic here, f(n)=f(n-1)+f(n-2).Time complexity is O(2^n)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "5c2323d0",
    "metadata": {},
    "outputs": [
@@ -102,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "id": "a1b67209",
    "metadata": {},
    "outputs": [],
@@ -121,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "id": "56d34c9b",
    "metadata": {},
    "outputs": [
@@ -141,6 +158,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c43d3c88",
+   "metadata": {},
+   "source": [
+    "Explanation: The above code does the operation of binary search using recursion. The time comllexity is O(log(n)) since at each iteration only the half of the array is used to find whether the number is present or not.\n",
+    "Here mid stores the mid index of the array(Assume it is sorted). If the target is less than the array[mid], then the left portion is checked ,else if the target is greater than the array, the right portion is checked.If the target is same as the array[mid], then return the mid.\n",
+    "We have two pointers , low and high to mark the ends of the part of the array where the target might be present. If low>high, it indicates that the target is not present and hence -1 is returned."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "54734d89",
    "metadata": {},
    "source": [
@@ -149,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 7,
    "id": "1bd19b97",
    "metadata": {},
    "outputs": [],
@@ -165,12 +192,12 @@
     "        if arr[low]>arr[high]:\n",
     "          return False\n",
     "  \n",
-    "    return check(arr,low+1,high-1)"
+    "    return checkOrder(arr,low+1,high-1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 8,
    "id": "e14ea05d",
    "metadata": {},
    "outputs": [
@@ -189,6 +216,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d139f2e8",
+   "metadata": {},
+   "source": [
+    "Explanation: checkOrder() is used to check if  the array is in ascending order(asc=True) or in descending order(asc=False). We have two pointers to mark the start and the end position. At each iteration,the start pointer increments and the end pointer decrements. If the start>end, i.e at each iteration, the condition is satisfied and hence the array is sorted ."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "075e5cbb",
    "metadata": {},
    "source": [
@@ -197,13 +232,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 9,
    "id": "b860da17",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "def findOccurence(str,ch,index):\n",
+    "    #line a\n",
     "    if index>= len(str):\n",
     "        return\n",
     "    if str[index]==ch and arr[0]==-1:\n",
@@ -211,6 +247,7 @@
     "        print(\"first\",index)\n",
     "        \n",
     "    findOccurence(str,ch,index+1)\n",
+    "    #line b\n",
     "    if str[index]==ch and arr[1]==-1:\n",
     "            arr[1]=index\n",
     "            print(\"last\",index)\n",
@@ -222,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 10,
    "id": "3edd7afe",
    "metadata": {},
    "outputs": [
@@ -242,6 +279,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6f389ab2",
+   "metadata": {},
+   "source": [
+    "Explanation: we have an array that stores the first and last occurence of the element in the string. arr[0] stores the first occurence and arr[1] stores the last occurence. line a executes when the function is called and this line checks the first occurence. line b is executed when the function returns to the calling function and the line b finds last occurence of the element in the string."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "91482139",
    "metadata": {},
    "source": [
@@ -250,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 11,
    "id": "c466e482",
    "metadata": {},
    "outputs": [],
@@ -271,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 12,
    "id": "ec4757ff",
    "metadata": {},
    "outputs": [
@@ -289,6 +334,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "feac59f8",
+   "metadata": {},
+   "source": [
+    "Explanation: At each iteration, the remainder is found and the number is divided by 4. If the remainder is not 0, then the number is not power of four 'False' is returned. The base condition is when the number is 1 and the remainder is 0, the returned value is True.The time complexity is O(log4(n)), since the at every iteration , the number is divided by 4."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2a5a9e65",
    "metadata": {},
    "source": [
@@ -297,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 13,
    "id": "c38687e9",
    "metadata": {},
    "outputs": [],
@@ -312,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 14,
    "id": "9f37275f",
    "metadata": {},
    "outputs": [],
@@ -328,6 +381,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "561ff98e",
+   "metadata": {},
+   "source": [
+    "The above code is the sample for creating a Tree."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ca65c514",
    "metadata": {},
    "source": [
@@ -335,8 +396,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7601030d",
+   "metadata": {},
+   "source": [
+    "Inorder traversal: left child->parent->right child. In a binary tree, inroder traversal always returns the values in ascending order.(In binary tree, the left child value is less than the parent value and the right child value is greater than the parent).\n",
+    "\n",
+    "Preorder traversal: parent->left child->right child\n",
+    "Postorder traversal: left child->right child->parent"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 15,
    "id": "3f8b64ad",
    "metadata": {},
    "outputs": [],
@@ -365,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 16,
    "id": "2f48cc89",
    "metadata": {},
    "outputs": [
@@ -388,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 17,
    "id": "e0bf83e5",
    "metadata": {},
    "outputs": [
@@ -411,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 18,
    "id": "a22030cf",
    "metadata": {},
    "outputs": [
@@ -451,8 +523,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0c8b17a5",
+   "metadata": {},
+   "source": [
+    "Explanation: The base case here is: if root node is a leaf node, add it's value and check if the sum is equal to the target and return the boolean value."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 19,
    "id": "82272017",
    "metadata": {},
    "outputs": [],
@@ -471,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 20,
    "id": "3ff14cca",
    "metadata": {},
    "outputs": [],
@@ -483,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 21,
    "id": "106babfd",
    "metadata": {},
    "outputs": [
@@ -516,8 +596,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7541e843",
+   "metadata": {},
+   "source": [
+    "Explanation: base case: if the node is a leaf node, check if it has the value same as that of the target. If yes, return null or else return the node itself."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 22,
    "id": "8962e803",
    "metadata": {},
    "outputs": [],
@@ -535,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 23,
    "id": "6af97d9e",
    "metadata": {},
    "outputs": [
@@ -575,8 +663,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8ede0f20",
+   "metadata": {},
+   "source": [
+    "Explanation:The left child becomes the right child and the right child becomes the left child. The base case is if node is null the return the control back to the calling function."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 24,
    "id": "006d1528",
    "metadata": {},
    "outputs": [],
@@ -590,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 25,
    "id": "f4b66e95",
    "metadata": {},
    "outputs": [
@@ -639,8 +735,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "83b9ba7d",
+   "metadata": {},
+   "source": [
+    "Explanation: At each iteration, the node is traversed and hence +1 is added . leftMax stores the depth of the left tree and rightMax stores the depth of the right tree. We need to find the maximum depth and hence we return max(leftMax,rightMax)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 26,
    "id": "0abac7ac",
    "metadata": {},
    "outputs": [],
@@ -656,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 27,
    "id": "b5c53e11",
    "metadata": {},
    "outputs": [
